[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "game-sdk"
version = "0.1.5"
description = "SDK for hosting agents and games"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.10.5",
    "requests>=2.26.0",
    "typing-extensions>=4.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["game_sdk", "game_sdk.*"]  # â† Ensures all submodules are included
